# open-watch

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
bytetrack/: Object.h
models/: DOWNLOAD-INSTRUCTIONS.txt  MobileNetSSD_deploy.prototxt
scripts/: doctor.ps1  doctor.sh  run.ps1  run.sh
src/: tracker_linux.cpp  tracker_windows.cpp
videos/: README.md
